fix port and add details to readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 packages/nuxt/node_modules
 packages/nextjs/node_modules
+packages/nextjs/.next
 packages/sapper/node_modules
 packages/nest/node_modules
 node_modules
