--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
+    "dev": "next -p 3003",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3003"
   },
   "keywords": [],
   "author": "",
